--- a/gui/ui/mainwindow.ui
+++ b/gui/ui/mainwindow.ui
@@ -113,7 +113,11 @@
          <height>637</height>
         </rect>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="margin">
+         <number>0</number>
+        </property>
+       </layout>
       </widget>
      </widget>
     </item>
