--- a/gui/ui/mainwindow.ui
+++ b/gui/ui/mainwindow.ui
@@ -822,6 +822,12 @@
             </item>
             <item>
              <widget class="QGroupBox" name="template_groupbox">
+              <property name="font">
+               <font>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="title">
                <string>Template du rapport:</string>
               </property>
