--- a/gui/ui/mainwindow.ui
+++ b/gui/ui/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1096</width>
-    <height>899</height>
+    <height>995</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -110,7 +110,7 @@
          <x>0</x>
          <y>0</y>
          <width>248</width>
-         <height>684</height>
+         <height>779</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -686,7 +686,7 @@
      <item>
       <widget class="QFrame" name="advanced_frame">
        <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+        <enum>QFrame::NoFrame</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
@@ -747,7 +747,7 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>525</width>
+             <width>540</width>
              <height>442</height>
             </rect>
            </property>
